--- a/less/style.less
+++ b/less/style.less
@@ -1132,6 +1132,23 @@ body.mobile {
 	}
 }
 
+// ----------------------------------------
+// ! static-navigation
+// ----------------------------------------
+.static-navigation {
+	padding: 12px 0 16px;
+	border-top: 6px solid #D3A871;
+	background: #fff;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	box-shadow: 0 0 8px #aaa;
+
+	.share .d-icon {
+		padding-top: 7px;
+	}
+}
+
 @media (max-width: 992px) {
 	.post-showcase .item {
 		height: 300px;
