--- a/style.css
+++ b/style.css
@@ -1336,3 +1336,7 @@ section.hotel .item a h4 {
 .iedu_ed {
   background: url(images/theme_bg_ed.jpg) no-repeat !important; }
 }
+.iedu_visit {
+  background: url(images/theme_bg_visit.jpg) no-repeat !important; }
+}
+
