--- a/style.css
+++ b/style.css
@@ -1334,9 +1334,9 @@ section.hotel .item a h4 {
 }
 
 .iedu_ed {
-  background: url(images/theme_bg_ed.jpg) no-repeat !important; }
+  background: url(images/theme_bg_ed.jpg) no-repeat !important; 
 }
 .iedu_visit {
-  background: url(images/theme_bg_visit.jpg) no-repeat !important; }
+  background: url(images/theme_bg_visit.jpg) no-repeat !important; 
 }
 
