theme_bg_school.jpg

--- a/style.css
+++ b/style.css
@@ -1342,5 +1342,8 @@ section.hotel .item a h4 {
 .iedu_certification {
   background: url(images/theme_bg_certification.jpg) no-repeat !important; 
 }
+.iedu_school {
+  background: url(images/theme_bg_school.jpg) no-repeat !important; 
+}
 
 
