--- a/style.css
+++ b/style.css
@@ -1345,5 +1345,7 @@ section.hotel .item a h4 {
 .iedu_school {
   background: url(images/theme_bg_school.jpg) no-repeat !important; 
 }
-
+.iedu_camp {
+  background: url(images/theme_bg_camp.jpg) no-repeat !important; 
+}
 
