Revert "remove special padding of single page."
This reverts commit cd241e576b2028cea4936fb2aadbdf3e229d9c0f.

--- a/style.css
+++ b/style.css
@@ -674,6 +674,11 @@ footer .copyright p {
   font-size: 20px;
   line-height: 72px;
 }
+.custom-single section#service_process .section-content,
+.custom-single section#apply_form .section-content,
+.custom-single section#fee_agreement .section-content {
+  padding: 18px;
+}
 .custom-single section .section-content {
   padding: 18px 18px 6px;
   background: #fff;
