--- a/less/style.less
+++ b/less/style.less
@@ -431,6 +431,12 @@ footer {
 			line-height: 72px;
 		}
 
+		&#service_process, &#apply_form, &#fee_agreement {
+			.section-content {
+				padding: 18px;
+			}
+		}
+
 		.section-content {
 			padding: 18px 18px 6px;
 			background: #fff;
