apply form need a special padding.

--- a/less/style.less
+++ b/less/style.less
@@ -431,7 +431,7 @@ footer {
 			line-height: 72px;
 		}
 
-		&#service_process, &#apply_form, &#fee_agreement {
+		&#apply_form {
 			.section-content {
 				padding: 18px;
 			}
