--- a/style.css
+++ b/style.css
@@ -674,9 +674,7 @@ footer .copyright p {
   font-size: 20px;
   line-height: 72px;
 }
-.custom-single section#service_process .section-content,
-.custom-single section#apply_form .section-content,
-.custom-single section#fee_agreement .section-content {
+.custom-single section#apply_form .section-content {
   padding: 18px;
 }
 .custom-single section .section-content {
