--- a/style.css
+++ b/style.css
@@ -1338,3 +1338,18 @@ body.mobile.mobile-nav-open .mobile-footer {
 section.hotel .item a h4 {
   text-align: center;
 }
+.iedu_school {
+  background: url(images/theme_bg_school.jpg) no-repeat !important;
+}
+.iedu_certification {
+  background: url(images/theme_bg_certification.jpg) no-repeat !important;
+}
+.iedu_camp {
+  background: url(images/theme_bg_camp.jpg) no-repeat !important;
+}
+.iedu_ed {
+  background: url(images/theme_bg_ed.jpg) no-repeat !important;
+}
+.iedu_visit {
+  background: url(images/theme_bg_visit.jpg) no-repeat !important;
+}
