--- a/less/style.less
+++ b/less/style.less
@@ -1266,3 +1266,19 @@ body.mobile {
 .breadcrumb { padding:4px !important; }
 .btn-view-detail a { background:#ec940f; color:white; padding:3px 15px; }
 section.hotel .item a h4 { text-align:center; }
+
+.iedu_ed {
+  background: url(images/theme_bg_ed.jpg) no-repeat !important; 
+}
+.iedu_visit {
+  background: url(images/theme_bg_visit.jpg) no-repeat !important; 
+}
+.iedu_certification {
+  background: url(images/theme_bg_certification.jpg) no-repeat !important; 
+}
+.iedu_school {
+  background: url(images/theme_bg_school.jpg) no-repeat !important; 
+}
+.iedu_camp {
+  background: url(images/theme_bg_camp.jpg) no-repeat !important; 
+}
