以camp为例尝试将二级页面与三级页面的背景分开

--- a/style.css
+++ b/style.css
@@ -1359,6 +1359,6 @@ section.hotel .item a h4 {
 .iedu_school {
   background: url(images/theme_bg_school.jpg) center top no-repeat !important;
 }
-.iedu_camp {
+.archive_iedu_camp {
   background: url(images/theme_bg_camp.jpg) center top no-repeat !important;
 }
