--- a/style.css
+++ b/style.css
@@ -1361,17 +1361,17 @@ section.hotel .item a h4 {
   text-align: center;
 }
 .archive_iedu_ed {
-  background: url(images/theme_bg_ed.jpg) center top no-repeat !important;
+  background: url(images/theme_bg_ed.png) center top no-repeat !important;
 }
 .archive_iedu_visit {
-  background: url(images/theme_bg_visit.jpg) center top no-repeat !important;
+  background: url(images/theme_bg_visit.png) center top no-repeat !important;
 }
 .archive_iedu_certification {
-  background: url(images/theme_bg_certification.jpg) center top no-repeat !important;
+  background: url(images/theme_bg_certification.png) center top no-repeat !important;
 }
 .archive_iedu_school {
-  background: url(images/theme_bg_school.jpg) center top no-repeat !important;
+  background: url(images/theme_bg_school.png) center top no-repeat !important;
 }
 .archive_iedu_camp {
-  background: url(images/theme_bg_camp.jpg) center top no-repeat !important;
+  background: url(images/theme_bg_camp.png) center top no-repeat !important;
 }
