--- a/style.css
+++ b/style.css
@@ -1251,6 +1251,33 @@ body.mobile.mobile-nav-open .mobile-footer {
 .static-navigation .share .d-icon {
   padding-top: 7px;
 }
+.mail-state > * {
+  padding-bottom: 12px;
+}
+.mail-state .glyphicon-refresh {
+  -webkit-animation: loading 1s linear infinite;
+  animation: loading 1s linear infinite;
+}
+@-webkit-keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 @media (max-width: 992px) {
   .post-showcase .item {
     height: 300px;
