--- a/style.css
+++ b/style.css
@@ -1368,7 +1368,9 @@ body.mobile.mobile-nav-open .mobile-footer {
     height: 200px;
   }
 }
-/*added by Mansy*/
+/*added by Mansy added by Mansy added by Mansy added by Mansy added by Mansy added by Mansy*/
+/*added by Mansy added by Mansy added by Mansy added by Mansy added by Mansy added by Mansy*/
+/*added by Mansy added by Mansy added by Mansy added by Mansy added by Mansy added by Mansy*/
 #contact {
   width: 70%;
   margin: 40px auto;
@@ -1474,4 +1476,16 @@ section.hotel .item a h4 {
 }
 .archive_iedu_camp {
   background: url(images/theme_bg_camp.png) center top no-repeat !important;
+}
+.main-content {
+  line-height: 25px;
+}
+.main-content strong {
+  line-height: 20px;
+}
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+  line-height: 30px;
+}
+.main-content .text-danger {
+  color: #E10000;
 }
