--- a/style.css
+++ b/style.css
@@ -1477,15 +1477,15 @@ section.hotel .item a h4 {
 .archive_iedu_camp {
   background: url(images/theme_bg_camp.png) center top no-repeat !important;
 }
-.main-content {
+#main-content {
   line-height: 25px !important;
 }
-.main-content strong {
+#main-content strong {
   line-height: 20px !important;
 }
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+#main-content h1, #main-content h2, #main-content h3, #main-content h4, #main-content h5, #main-content h6 {
   line-height: 30px !important;
 }
-.main-content .text-danger {
+#main-content .text-danger {
   color: #E10000 !important;
 }
