--- a/less/style.less
+++ b/less/style.less
@@ -779,6 +779,7 @@ nav.simple-flat .container-fluid {
       height: auto;;
       padding: 0;
       margin: 0;
+      max-width: 276px;
     }
   }
 
