--- a/style.css
+++ b/style.css
@@ -938,6 +938,7 @@ nav.simple-flat .container-fluid .navbar-header a {
   height: auto;
   padding: 0;
   margin: 0;
+  max-width: 276px;
 }
 nav.simple-flat .container-fluid ul.navbar-nav > li {
   padding: 15px 24px;
