fix single page layout.

--- a/less/style.less
+++ b/less/style.less
@@ -1138,6 +1138,12 @@ body.mobile {
 	.archive-title {
 		display: none;
 	}
+
+	.custom-single {
+		.price strong {
+			font-size: 18px;
+		}
+	}
 }
 
 .mobile-nav {
