fix single page carousel style.

--- a/less/style.less
+++ b/less/style.less
@@ -1345,19 +1345,14 @@ body.mobile {
 
 	.archive-item-list .right, .archive-item-list .left {
 		width: 100%;
-		height: 50%;
-	}
-
-	.archive-item-list .right {
-		top: 50%;
-	}
-
-	.archive-item-list .item {
-		height: 480px;
 	}
 
 	.post-showcase .item {
 		height: 240px;
+
+		.img-wrapper {
+			height: 240px;
+		}
 
 		.img-responsive {
 			height: auto;
@@ -1367,6 +1362,10 @@ body.mobile {
 
 @media (max-width: 480px) {
 	.post-showcase .item {
+		.img-wrapper {
+			height: 200px;
+		}
+
 		height: 200px;
 	}
 }
