adjust mobile layout
1. set  breadcrumb margin to 0
2. mobile archive-list left,right width 100%;

--- a/less/style.less
+++ b/less/style.less
@@ -1144,6 +1144,14 @@ body.mobile {
 			font-size: 18px;
 		}
 	}
+
+	.breadcrumb {
+		margin: 0;
+	}
+
+	.archive-item-list .right, .archive-item-list .left {
+		width: 100%;
+	}
 }
 
 .mobile-nav {
@@ -1341,10 +1349,6 @@ body.mobile {
 @media (max-width: 720px) {
 	footer {
 		text-align: center;
-	}
-
-	.archive-item-list .right, .archive-item-list .left {
-		width: 100%;
 	}
 
 	.post-showcase .item {
