change the post-title color

--- a/less/style.less
+++ b/less/style.less
@@ -1160,6 +1160,8 @@ body.mobile {
 		border-radius: 2px;
 		text-align: center;
 		position: relative;
+		background: #D3A971;
+		color: #fff;
 
 		&::before {
 			content: ' ';
