--- a/less/style.less
+++ b/less/style.less
@@ -879,6 +879,12 @@ nav.simple-flat .container-fluid {
 	.panel {
 		box-shadow: 0 1px 1px rgba(0,0,0,.5);
 	}
+
+	.panel-heading {
+		a {
+			color: inherit;
+		}
+	}
 }
 
 // ========================================
