adjust the contact page.

--- a/less/style.less
+++ b/less/style.less
@@ -1405,7 +1405,33 @@ body.mobile {
 	}
 }
 
+.mobile {
+	#contact {
+		width: 100%;
 
+		.left {
+			padding: 15px;
+		}
+
+		.right {
+			border: none;
+		}
+
+		.contact-submit {
+			display: block;
+			width: 100%;
+		}
+	}
+}
+
+#contact {
+	.left {
+		padding-right:70px;
+	}
+	.right {
+		border-left:1px solid #f1f1f1;
+	}
+}
 
 
 /*added by Mansy*/
