adjust contact page.

--- a/less/style.less
+++ b/less/style.less
@@ -1421,6 +1421,14 @@ body.mobile {
 			display: block;
 			width: 100%;
 		}
+
+		.contact-item {
+			margin-bottom: 15px;
+		}
+
+		.col-xs-6 {
+			width: 50%;
+		}
 	}
 }
 
@@ -1469,13 +1477,13 @@ body.mobile {
   background-repeat: no-repeat;
 }
 #contact .icon1 {
-  background-position: 0 -320px;
+  background-position: 7px -315px;
 }
 #contact .icon2 {
-  background-position: 0 -400px;
+  background-position: 7px -395px;
 }
 #contact .icon3 {
-  background-position: 0 -240px;
+  background-position: 7px -235px;
 }
 .archive-title {
   padding-bottom: 50px;
