--- a/style.css
+++ b/style.css
@@ -403,6 +403,7 @@ body {
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 .banner .carousel-caption a {
   color: #fff;
