put intro a to higher layer.

--- a/less/style.less
+++ b/less/style.less
@@ -1128,6 +1128,11 @@ body.mobile {
 			.right {
 				position: relative;
 
+				.intro a {
+					position: relative;
+					z-index: 99;
+				}
+
 				.bottom {
 					position: relative;
 					bottom: auto;
