--- a/less/style.less
+++ b/less/style.less
@@ -396,7 +396,14 @@ footer {
 // ! single
 // ----------------------------------------
 .custom-single {
-	padding: 24px 0;
+	padding: 30px 0;
+
+	.container {
+		background: #e9e9e9;
+		border-radius: 5px;
+		padding-bottom: 20px;
+		padding-top: 5px;
+	}
 	
 	// single page header area
 	h1 {
