--- a/style.css
+++ b/style.css
@@ -651,7 +651,13 @@ footer .copyright p {
   padding-right: 6px;
 }
 .custom-single {
-  padding: 24px 0;
+  padding: 30px 0;
+}
+.custom-single .container {
+  background: #e9e9e9;
+  border-radius: 5px;
+  padding-bottom: 20px;
+  padding-top: 5px;
 }
 .custom-single h1 {
   font-size: 20px;
