--- a/less/style.less
+++ b/less/style.less
@@ -399,7 +399,7 @@ footer {
 	padding: 30px 0;
 
 	.container {
-		background: #e9e9e9;
+		background: #eee;
 		border-radius: 5px;
 		padding-bottom: 20px;
 		padding-top: 5px;
