--- a/style.css
+++ b/style.css
@@ -654,7 +654,7 @@ footer .copyright p {
   padding: 30px 0;
 }
 .custom-single .container {
-  background: #e9e9e9;
+  background: #eee;
   border-radius: 5px;
   padding-bottom: 20px;
   padding-top: 5px;
