--- a/less/style.less
+++ b/less/style.less
@@ -398,7 +398,7 @@ footer {
 .custom-single {
 	padding: 30px 0;
 
-	.container {
+	&>.container {
 		background: #eee;
 		border-radius: 5px;
 		padding-bottom: 20px;
