--- a/style.css
+++ b/style.css
@@ -653,7 +653,7 @@ footer .copyright p {
 .custom-single {
   padding: 30px 0;
 }
-.custom-single .container {
+.custom-single > .container {
   background: #eee;
   border-radius: 5px;
   padding-bottom: 20px;
