--- a/less/style.less
+++ b/less/style.less
@@ -441,7 +441,18 @@ footer {
 
 		&#apply_form {
 			.section-content {
-				padding: 18px;
+				//padding: 18px;
+			}
+
+			a {
+				display: block;
+				width: 100%;
+				text-align: center;
+				transition: .5s;
+
+				&:hover {
+					background: #dedede;
+				}
 			}
 		}
 
