adjust download button style.

--- a/less/style.less
+++ b/less/style.less
@@ -441,7 +441,7 @@ footer {
 
 		&#apply_form {
 			.section-content {
-				//padding: 18px;
+				padding: 0;
 			}
 
 			a {
@@ -449,9 +449,10 @@ footer {
 				width: 100%;
 				text-align: center;
 				transition: .5s;
+				padding: 18px;
 
 				&:hover {
-					background: #dedede;
+					background: #fefefe;
 				}
 			}
 		}
