adjust bg color for download button

--- a/style.css
+++ b/style.css
@@ -693,7 +693,7 @@ footer .copyright p {
   padding: 18px;
 }
 .custom-single section#apply_form a:hover {
-  background: #fefefe;
+  background: #f8f8f8;
 }
 .custom-single section .section-content {
   padding: 18px 18px 6px;
